--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saas-app",
+  "name": "saas_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.30.1",
-    "@hookform/resolvers": "^5.2.1",
+    "@clerk/nextjs": "^6.19.4",
+    "@hookform/resolvers": "^5.0.1",
     "@jsmastery/utils": "^1.0.2",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@sentry/nextjs": "^10.5.0",
-    "@supabase/supabase-js": "^2.55.0",
-    "@vapi-ai/web": "^2.3.8",
+    "@opentelemetry/core": "^2.0.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@sentry/nextjs": "^9.22.0",
+    "@supabase/supabase-js": "^2.49.7",
+    "@vapi-ai/web": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.539.0",
-    "next": "^15.4.2-canary.44",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.76"
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
 }
